--- a/11.3. Practice HTML and CSS/1assignment1.css
+++ b/11.3. Practice HTML and CSS/1assignment1.css
@@ -5,6 +5,9 @@ li {
     border: #444444 solid 1px;
     display: inline-block;
 }
+li a:hover{
+    background-color: yellow;
+}
 a {
     text-decoration: none;
 }
