--- a/solve.css
+++ b/solve.css
@@ -1,15 +1,34 @@
+body {
+    margin : 0px;
+}
 h1 {
     font-family : sans-serif;
     font-size : 24px;
-    padding: 32px;
-    color: #ffaaaa;
+    margin : 0px;
+    padding : 16px;
+    color : #ccccff;
     background-color : #333333;
-    border-left : #ffaaaa solid 4px;
+    border-left: #ccccff solid 4px;
 }
 
-p {
+#alert {
+    margin : 8px;
+    padding : 8px;
+    background-color : #ffffcc;
+}
+
+.page {
+    margin : 8px;
+    padding : 8px;
+    background-color : #eeeeff;
+}
+
+h2 {
     font-family : sans-serif;
-    background-color : #cccccc;
     font-size : 18px;
-    margin-left : 32px;
+    border-bottom: #ccccff solid 4px;
+}
+
+.iniad {
+    color: #0000ff;
 }
